# ocaml_metrics

./: METRICS_DESCRIPTION.md  README.md  dune  dune-project  issues.md  mylinter.opam  ocaml_metrics.opam
.github/workflows/: master.yml
src/: Build_iterators.ml  Build_iterators.mli  CollectedMetrics.ml  CollectedMetrics.mli  Config.ml  LoadDune.ml  LoadDune.mli  METRIC.ml  METRIC.mli  My_Tast_iterator.ml  My_Tast_iterator.mli  dune  main.ml  utils.ml
src/metrics/: Cohesion.ml  Coupling.ml  CyclomaticComplexity.ml  Experiment.ml  Function_count.ml  Graph.ml  Halstead.ml  LOC.ml  Structure_item_count.ml  dune  test.ml
src/pattern/: Names.ml  Tast_pattern.ml  Tast_pattern.mli  Texp_names.ml  dune
tests/CC.t/: Functions.ml  dune  run.t
tests/LOC.t/: Functions.ml  dune  run.t
tests/cohesion.t/: Cohesion.ml  dune  run.t
tests/cohesion_1.t/: Cohesion_1.ml  dune  run.t
tests/coupling.t/: Algo.ml  Algo.mli  Graph.ml  Usage.ml  dune  run.t
tests/coupling.t/strange_cases/: dune  non_api_calls.mli
tests/coupling.t/strange_cases/non_api_calls/: dune  non_api_calls.ml
tests/coupling.t/strange_cases/test_ext/: dune  test_ext.ml
tests/factorial_CC.t/: Factorial.ml  dune  run.t
tests/halstead.t/: Functions.ml  dune  run.t
