(env
 (_
  (flags
   (:standard -w -3-9-32-33-39 -warn-error -26-27))))

(library
 (name zanuda_core)
 (modules
  Utils
  METRIC
  My_Tast_iterator
  CollectedMetrics
  LoadDune
  Config
  Build_iterators)
 (libraries ppxlib sexplib yojson Tast_pattern ocamlgraph)
 (preprocess
  (pps ppx_optcomp ppx_sexp_conv ppx_inline_test))
 (inline_tests))

(executable
 (name main)
 (public_name ocaml_metrics)
 (modules main)
 (libraries
  base
  stdio
  yojson
  ppxlib
  compiler-libs.common
  Tast_pattern
  zanuda_core
  Metrics)
 (preprocess
  (pps ppx_optcomp ppx_sexp_conv ppx_inline_test))
 (package ocaml_metrics))
